fix: dark mode dim color

--- a/src/themes/themes.scss
+++ b/src/themes/themes.scss
@@ -20,6 +20,7 @@
     --ac-inverse-color: var(--ac-foreground-base);
     --ac-interactive-color: var(--ac-background-light);
     --ac-muted-color: hsla(var(--ac-background-light-hsl), 0.075);
+    --ac-dim-color: var(--ac-foreground-light);
     --ac-negative-hsl: var(--ac-negative-light-hsl);
     --ac-positive-hsl: var(--ac-positive-light-hsl);
     --ac-theme-color: var(--ac-theme-primary-light);
@@ -34,6 +35,7 @@
     --ac-interactive-color: var(--ac-foreground-base);
     --ac-text-color: hsla(var(--ac-foreground-base-hsl), 0.75);
     --ac-muted-color: hsla(var(--ac-foreground-base-hsl), 0.075);
+    --ac-dim-color: var(--ac-background-base);
     --ac-negative-hsl: var(--ac-negative-dark-hsl);
     --ac-positive-hsl: var(--ac-positive-dark-hsl);
     --ac-theme-color: var(--ac-theme-primary-dark);
